kube/service-dev.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dq-raw-message-retrieval-service
  name: dq-raw-message-retrieval-service
spec:
  ports:
  - name: keycloak
    port: 8081
    targetPort: keycloak
  selector:
    name: dq-raw-message-retrieval
