kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: dq-raw-message-retrieval-service
  name: dq-raw-message-retrieval-service
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    name: dq-raw-message-retrieval
