kube/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx-external"
    stable.k8s.psg.io/kcm.class: default
  name: dq-raw-message-retrieval-ingress
spec:
  rules:
  - host: retrieve-a-raw-message.notprod.acp.homeoffice.gov.uk
    http:
      paths:
      - backend:
          serviceName: dq-raw-message-retrieval-service
          servicePort: http
        path: /
  tls:
  - hosts:
    - retrieve-a-raw-message.notprod.acp.homeoffice.gov.uk
    - www.retrieve-a-raw-message.notprod.acp.homeoffice.gov.uk
