kube/network-policy-dev.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rmr
spec:
  podSelector:
    matchLabels:
      name: dq-raw-message-retrieval
  ingress:
    - ports:
        - protocol: TCP
          port: 8081
    - from:
        - podSelector:
            matchLabels:
              name: dq-raw-message-retrieval
      ports:
        - protocol: TCP
          port: 3000
